# aerial_stitching

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  debug_utils.cpp  debug_utils.h  docker-compose.yml  functions.cpp  functions.h  gdal2tiles.py  image.h  main.cpp  main.sh  main_old.cpp  metadata.cpp  metadata.h  rabbitmq.h  seamfinder.cpp  seamfinder.h  simulate_aerial.py  test_metadata.cpp  utils.cpp  utils.h
